--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
     padding: 0;
 }
 
+.play{
+    background-color: red;
+}
+
 .mainCharacterView{
 
 width: 50%;
@@ -46,14 +50,11 @@ align-items: center;
     border: 1px solidblack;
     width: 30vw;
     height: 40vh;
-    background-image: url("/images/space_hero.gif");
+    background-image: url("images/space_hero.gif");
     background-size: cover ;
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 20px 10px white;
-    
-
-    
 }
 .playerStats{
     display: flex;
@@ -73,7 +74,7 @@ align-items: center;
     border: 1px solidblack;
     width: 30vw;
     height: 35vh;
-    background-image: url("/images/enemy.gif");
+    background-image: url("images/enemy.gif");
     background-size: cover ;
     background-position: center;
     background-repeat: no-repeat;
